--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logobranca.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
     <title>Boostly</title>
     <style>
         
     </style>
 </head>
 <body>
-        
+        <header><!--HEADER INICIO-->
+            <nav> <!--ESSA É A PARTE AONDE VAI FICAR A LOGO O MENU ETC-->
+
+            </nav> <!--FIM DO NAV-->
+        </header><!--HEADER FINAL-->
+
+        <main><!--MAIN INICIO-->
+
+        </main><!--MAIN FINAL-->
+
+        <footer><!--FOOTER INICIO-->
+
+        </footer><!--FOOTER FINAL-->
+
+        <script src="js/script.js"></script>
 </body>
 </html>
