Header terminado e o main foi iniciado

--- a/index.html
+++ b/index.html
@@ -13,11 +13,53 @@
 <body>
         <header><!--HEADER INICIO-->
             <nav> <!--ESSA É A PARTE AONDE VAI FICAR A LOGO O MENU ETC-->
-
+                <img src="img/logoPreta.png" alt="LOGO BOOSTLY">    
+                <ul>
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="#">SOBRE NÓS</a></li>
+                    <li><a href="#">SERVIÇOS</a></li>
+                    <li><a href="#">DEPOIMENTOS</a></li>
+                    <li><a href="#">CASE DE SUCESSO</a></li>
+                </ul>
+                
+               <a href="#">CONTATO</a> <!--BOTÃO DE CONTATO-->
             </nav> <!--FIM DO NAV-->
+
+            <div id="menu-Mobile"> <!--MENU MOBILE INICIO-->
+                <ul>
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="#">SOBRE NÓS</a></li>
+                    <li><a href="#">SERVIÇOS</a></li>
+                    <li><a href="#">DEPOIMENTOS</a></li>
+                    <li><a href="#">CASE DE SUCESSO</a></li>
+                </ul>
+                <a href="#">CONTATO</a> <!--BOTÃO DE CONTATO-->
+            </div> <!--MENU MOBILE FIM-->
+
         </header><!--HEADER FINAL-->
 
         <main><!--MAIN INICIO-->
+            <section class="primeiro-conteudo"> <!--PRIMEIRA PARTE DO CONTEUDO INICIO-->
+                <article class="container-txt-botao"> <!--ESSA PARTE VAI ESTAR O BOTAO E UMA BREVE INTRODUÇÃO SOBRE A NOSSA CONSULTORIA INICIO-->
+                    <!--BREVE INTRODUÇÃO SOBRE A EMPRESA-->
+                    <p>A Boostly é uma consultoria de marketing digital focada em impulsionar pequenas empresas rumo ao crescimento. Ajudamos marcas a se destacarem no mercado com estratégias inteligentes, presença online forte e resultados reais. Nosso objetivo é simples: levar o seu negócio ao próximo nível.</p>
+
+                    <!--BOTÃO AGENDE SUA CONSULTA-->
+                    <a href="#">Agende sua Consulta</a>
+                </article> <!--ESSA PARTE VAI ESTAR O BOTAO E UMA BREVE INTRODUÇÃO SOBRE A NOSSA CONSULTORIA FIM-->
+
+                <article class="img"> <!--ARTICLE AONDE ESTA A IMG-->
+                    <img src="img/img-pessoa-Photoroom.png" alt="FOTO DE UM HOMEM">
+                </article> <!--ARTICLE AONDE ESTA A IMG-->
+
+            </section> <!--PRIMEIRA PARTE DO CONTEUDO INICIO-->
+
+
+            <section class="sobre"> <!--ESSA VAI SER A PARTE SOBRE A CONSULTORIA -->
+                <h1>SOBRE A BOOSTLY</h1>
+                <p>A Boostly nasceu com o propósito de ajudar pequenas e médias empresas a conquistarem mais visibilidade, clientes e resultados reais através do marketing digital.
+                Nossa missão é turbinar o crescimento dos negócios, transformando ideias em estratégias e estratégias em resultados.</p>
+            </section>
 
         </main><!--MAIN FINAL-->
 
