--- a/index.html
+++ b/index.html
@@ -56,10 +56,33 @@
 
 
             <section class="sobre"> <!--ESSA VAI SER A PARTE SOBRE A CONSULTORIA -->
+                <article id="container-txt">
                 <h1>SOBRE A BOOSTLY</h1>
-                <p>A Boostly nasceu com o propósito de ajudar pequenas e médias empresas a conquistarem mais visibilidade, clientes e resultados reais através do marketing digital.
-                Nossa missão é turbinar o crescimento dos negócios, transformando ideias em estratégias e estratégias em resultados.</p>
-            </section>
+                <p>
+                    A Boostly nasceu com o propósito de ajudar pequenas e médias empresas a conquistarem mais visibilidade, clientes e resultados reais através do marketing digital.
+                    Nossa missão é turbinar o crescimento dos negócios, transformando ideias em estratégias e estratégias em resultados.
+                </p>
+
+                <p>
+                    Com uma equipe apaixonada por inovação e criatividade, oferecemos soluções personalizadas em gestão de redes sociais, tráfego pago, branding, análise de marca e muito mais.
+                    Acreditamos que cada marca tem uma história única — e o nosso papel é fazer com que o mundo conheça a sua.
+                </p>
+
+                <p>
+                    Na Boostly, crescer não é sorte, é estratégia. 🚀
+                </p>
+                </article>
+            </section> <!--ESSA VAI SER A PARTE SOBRE A CONSULTORIA FINAL-->
+
+
+            <section class="servicos"> <!--ESSA É A PARTE DE SERVIÇOS INICIO-->
+                <h1>SERVIÇOS</h1>
+                <article class="container"> <!--CONTAINER DOS SERVIÇOS INICIO-->
+                    <div class="container-servicos">
+                        
+                    </div>
+                </article>  <!--CONTAINER DOS SERVIÇOS FINAL-->
+            </section> <!--ESSA É A PARTE DE SERVIÇOS FINAL-->
 
         </main><!--MAIN FINAL-->
 
