--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#">SOBRE NÓS</a></li>
                     <li><a href="#">SERVIÇOS</a></li>
                     <li><a href="#">DEPOIMENTOS</a></li>
-                    <li><a href="#">CASE DE SUCESSO</a></li>
+                    <li><a href="#">ENDEREÇO</a></li>
                 </ul>
                 
                <a href="#">CONTATO</a> <!--BOTÃO DE CONTATO-->
@@ -30,7 +30,7 @@
                     <li><a href="#">SOBRE NÓS</a></li>
                     <li><a href="#">SERVIÇOS</a></li>
                     <li><a href="#">DEPOIMENTOS</a></li>
-                    <li><a href="#">CASE DE SUCESSO</a></li>
+                    <li><a href="#">ENDEREÇO</a></li>
                 </ul>
                 <a href="#">CONTATO</a> <!--BOTÃO DE CONTATO-->
             </div> <!--MENU MOBILE FIM-->
@@ -251,14 +251,23 @@
             </section> <!--PARTE DOS DEPOIMENTOS FINAL-->
 
 
-            <section> <!--ENDEREÇO INICIO-->
-
+            <section class="container-endereco"> <!--ENDEREÇO INICIO-->
+                <article>
+                    <h1>Endereço <img src="img/imgIcones/marker.png" alt="Mapa"></h1>
+                    <iframe src="https://www.google.com/maps/embed?pb=!4v1762036078341!6m8!1m7!1sxwAvE5S6Pj_rG4SjB6acKw!2m2!1d-21.70778334653792!2d-47.2760450406374!3f102.41334658424309!4f0.22434405092877796!5f0.7820865974627469" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </article>
             </section> <!--ENDEREÇO FINAL-->
 
         </main><!--MAIN FINAL-->
 
         <footer><!--FOOTER INICIO-->
+            <div class="icones">
+                        <a href="#"><img src="img/imgIcones/instagram.png" alt="Instagram"></a>
+                        <a href="#"><img src="img/imgIcones/linkedin.png" alt="Linkdin"></a>
+                        <a href="#"><img src="img/imgIcones/youtube.png" alt="YouTube"></a>
+                    </div>
 
+                    <p>&copy Boostly. Todos os direitos reservados.</p>
         </footer><!--FOOTER FINAL-->
 
         <script src="js/script.js"></script>
