--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h1>SERVIÇOS</h1>
                 <article class="container"> <!--CONTAINER DOS SERVIÇOS INICIO-->
                     <div class="container-servicos"> <!--GESTÃO DE REDES SOCIAIS INICIO-->
-                        <h1>GESTÃO DE REDES SOCIAIS</h1>
+                        <h2>GESTÃO DE REDES SOCIAIS</h2>
                         <p>
                             Criamos estratégias personalizadas para aumentar o engajamento e fortalecer a presença da sua marca nas redes sociais.
                         </p>
@@ -89,7 +89,7 @@
                     <!------------------------------------------------------------------------>
 
                     <div class="container-servicos"> <!--GESTÃO DE TRÁFEGO PAGO INICIO-->
-                        <h1>GESTÃO DE TRÁFEGO PAGO</h1>
+                        <h2>GESTÃO DE TRÁFEGO PAGO</h2>
                         <p>
                             Atraia mais clientes e aumente suas vendas com campanhas otimizadas no Google, Instagram e Facebook Ads.
                         </p>
@@ -101,7 +101,7 @@
                     <!------------------------------------------------------------------------>
 
                     <div class="container-servicos"> <!--IDENTIDADE VISUAL E BRANDING INICIO-->
-                        <h1>IDENTIDADE VISUAL E BRANDING</h1>
+                        <h2>IDENTIDADE VISUAL E BRANDING</h2>
                         <p>
                             Desenvolvemos a identidade visual da sua marca — logo, cores e estilo para transmitir confiança e profissionalismo.
                         </p>
@@ -113,7 +113,7 @@
                     <!------------------------------------------------------------------------>
 
                     <div class="container-servicos"> <!--ANÁLISE DE MARCA E POSICIONAMENTO INICIO-->
-                        <h1>ANÁLISE DE MARCA E POSICIONAMENTO</h1>
+                        <h2>ANÁLISE DE MARCA E POSICIONAMENTO</h2>
                         <p>
                             Estudamos o mercado e a percepção do seu público para posicionar sua marca de forma estratégica e competitiva.
                         </p>
@@ -125,7 +125,7 @@
                     <!------------------------------------------------------------------------>
 
                     <div class="container-servicos"> <!--AUDITORIA DE MARKETING DIGITAL INICIO-->
-                        <h1>AUDITORIA DE MARKETING DIGITAL</h1>
+                        <h2>AUDITORIA DE MARKETING DIGITAL</h2>
                         <p>
                            Analisamos suas redes, site e campanhas para identificar pontos de melhoria e propor ações que realmente geram resultados.
                         </p>
@@ -137,7 +137,7 @@
                     <!------------------------------------------------------------------------>
 
                     <div class="container-servicos"> <!--E-MAIL MARKETING E AUTOMAÇÃO INICIO-->
-                        <h1>E-MAIL MARKETING E AUTOMAÇÃO</h1>
+                        <h2>E-MAIL MARKETING E AUTOMAÇÃO</h2>
                         <p>
                            Criamos campanhas inteligentes e automatizadas para fidelizar clientes e manter sua marca sempre presente.
                         </p>
@@ -262,6 +262,7 @@
 
         <footer><!--FOOTER INICIO-->
             <div class="icones">
+                    <h2>Contato</h2>
                         <a href="#"><img src="img/imgIcones/instagram.png" alt="Instagram"></a>
                         <a href="#"><img src="img/imgIcones/linkedin.png" alt="Linkdin"></a>
                         <a href="#"><img src="img/imgIcones/youtube.png" alt="YouTube"></a>
