--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
         <header><!--HEADER INICIO-->
             <nav> <!--ESSA É A PARTE AONDE VAI FICAR A LOGO O MENU ETC-->
-                <img src="img/logoPreta.png" alt="LOGO BOOSTLY">    
+                <img src="img/logobranca.png" alt="LOGO BOOSTLY">    
                 <ul>
                     <li><a href="#">INICIO</a></li>
                     <li><a href="#">SOBRE NÓS</a></li>
