--- a/index.html
+++ b/index.html
@@ -54,23 +54,23 @@
                     <img src="img/pexels-mustapha-damilola-458083529-30033728-Photoroom.png" alt="FOTO DE UM HOMEM">
                 </article> <!--ARTICLE AONDE ESTA A IMG-->
 
-            </section> <!--PRIMEIRA PARTE DO CONTEUDO INICIO-->
+            </section> <!--PRIMEIRA PARTE DO CONTEUDO FINAL-->
 
 
             <section class="sobre"> <!--ESSA VAI SER A PARTE SOBRE A CONSULTORIA -->
                 <article id="container-txt">
-                <h1>SOBRE A BOOSTLY</h1>
-                <p>
+                    <h1>SOBRE A BOOSTLY</h1>
+                    <p>
                     A Boostly nasceu com o propósito de ajudar pequenas e médias empresas a conquistarem mais visibilidade, clientes e resultados reais através do marketing digital.
                     Nossa missão é turbinar o crescimento dos negócios, transformando ideias em estratégias e estratégias em resultados.
-                </p>
+                    </p>
 
-                <p>
+                    <p>
                     Com uma equipe apaixonada por inovação e criatividade, oferecemos soluções personalizadas em gestão de redes sociais, tráfego pago, branding, análise de marca e muito mais.
                     Acreditamos que cada marca tem uma história única e o nosso papel é fazer com que o mundo conheça a sua.
-                </p>
+                    </p>
 
-                <p>
+                    <p>
                     Na Boostly, crescer não é sorte, é estratégia. 🚀
                 </p>
                 </article>
