--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <p>
                             Depois da consultoria da Boostly, nossas vendas aumentaram em mais de 40%! A equipe entendeu exatamente o que precisávamos. 
                         </p>
-
+                    </div>
 
             <!---------------------------------------------------------------------------------------------------------------------->
 
