--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </ul>
                 
                <a href="#">CONTATO</a> <!--BOTÃO DE CONTATO-->
-               <span id="burguer-menu" class="material-symbols-outlined">menu</span> <!--MENU BURGUER-->
+               <span id="burguer-menu" class="material-symbols-outlined" onclick="ClickMenu()">menu</span> <!--MENU BURGUER-->
 
             </nav> <!--FIM DO NAV-->
 
