--- a/contato/index.html
+++ b/contato/index.html
@@ -11,7 +11,7 @@
     
 <div class="container">
         <h1>FORMULARIO</h1>
-        <form action="">
+    <form action="">
     <div class="container-inputs"> 
                 <input type="text" name="nome" id="inome" placeholder="Nome Completo" required>
     </div>
@@ -76,6 +76,9 @@
                <textarea name="mensagem" id="mens" placeholder="Mensagem"></textarea>
         </div>
 
+        <div class="container-inputs">
+             <button type="submit">ENVIAR</button>
+        </div>
 
         </form>
 </div>
