--- a/contato/index.html
+++ b/contato/index.html
@@ -8,6 +8,10 @@
     <title>Contato</title>
 </head>
 <body>
+
+    <header>
+        <img src="../img/logoPreta.png" alt="logo">
+    </header>
     
 <div class="container">
       <div class="text">
