--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </header><!--HEADER FINAL-->
 
         <main><!--MAIN INICIO-->
-            <section class="primeiro-conteudo" id="#INICIO"> <!--PRIMEIRA PARTE DO CONTEUDO INICIO-->
+            <section class="primeiro-conteudo" id="INICIO"> <!--PRIMEIRA PARTE DO CONTEUDO INICIO-->
                 <article class="container-txt-botao"> <!--ESSA PARTE VAI ESTAR O BOTAO E UMA BREVE INTRODUÇÃO SOBRE A NOSSA CONSULTORIA INICIO-->
                     <!--BREVE INTRODUÇÃO SOBRE A EMPRESA-->
                     <p>A Boostly é uma consultoria de marketing digital focada em impulsionar pequenas empresas rumo ao crescimento. Ajudamos marcas a se destacarem no mercado com estratégias inteligentes, presença online forte e resultados reais. Nosso objetivo é simples: levar o seu negócio ao próximo nível.</p>
@@ -57,7 +57,7 @@
             </section> <!--PRIMEIRA PARTE DO CONTEUDO FINAL-->
 
 
-            <section class="sobre" id="#SOBRE"> <!--ESSA VAI SER A PARTE SOBRE A CONSULTORIA -->
+            <section class="sobre" id="SOBRE"> <!--ESSA VAI SER A PARTE SOBRE A CONSULTORIA -->
                 <article id="container-txt">
                     <h1>SOBRE A BOOSTLY</h1>
                     <p>
@@ -103,7 +103,7 @@
             </section> <!--ESSA VAI SER A PARTE SOBRE A CONSULTORIA FINAL-->
 
 
-            <section class="servicos" id="#SERVICO"> <!--ESSA É A PARTE DE SERVIÇOS INICIO-->
+            <section class="servicos" id="SERVICO"> <!--ESSA É A PARTE DE SERVIÇOS INICIO-->
                 <h1>SERVIÇOS</h1>
                 <article class="container"> <!--CONTAINER DOS SERVIÇOS INICIO-->
                     <div class="container-servicos"> <!--GESTÃO DE REDES SOCIAIS INICIO-->
@@ -180,7 +180,7 @@
 
 
 
-            <section class="container-depoimentos" id="#DEPOIMENTO"> <!--PARTE DOS DEPOIMENTOS INICIO-->
+            <section class="container-depoimentos" id="DEPOIMENTO"> <!--PARTE DOS DEPOIMENTOS INICIO-->
                 <h1>DEPOIMENTOS</h1>
                 <article> <!--DEPOIMENTO INICIO-->
                     
@@ -282,7 +282,7 @@
             </section> <!--PARTE DOS DEPOIMENTOS FINAL-->
 
 
-            <section class="container-endereco" id="#ENDERECO"> <!--ENDEREÇO INICIO-->
+            <section class="container-endereco" id="ENDERECO"> <!--ENDEREÇO INICIO-->
                 <article>
                     <h1>Endereço <span class="material-symbols-outlined">location_on</span></h1>
                     <iframe src="https://www.google.com/maps/embed?pb=!4v1762036078341!6m8!1m7!1sxwAvE5S6Pj_rG4SjB6acKw!2m2!1d-21.70778334653792!2d-47.2760450406374!3f102.41334658424309!4f0.22434405092877796!5f0.7820865974627469" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
